# elftoolchain

libelf/: Makefile  elf_begin.c  elf_errmsg.c  elf_types.m4  gelf.h  gelf_getnote.c
test/libelf/scwx/: CMakeLists.txt  gelf-getnote.c
test/libelf/scwx/samples/: elf-notes
